antlr/JimpleLang/src/test/resources/cases/number.jmpl.case
println 12.3
<----->
12.3
<----->
println 2/6
<----->
0
<----->
println 6/2
<----->
3
<----->
println 2.0/6
<----->
0.3333333333333333
<----->
println 2/6.0
<----->
0.3333333333333333
<----->
println 1+2*3
<----->
7
<----->
println 1/"1"
<----->
!ERROR: Expected number but found: String
<----->
println "1"*2
<----->
!ERROR: Expected number but found: String
<----->